After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736589 - windows.c: Fix leaked error trap
windows.c: Fix leaked error trap
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-12 20:38 UTC by Owen Taylor
Modified: 2014-09-12 21:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
windows.c: Fix leaked error trap (1.10 KB, patch)
2014-09-12 20:38 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2014-09-12 20:38:12 UTC
The merge of the commit af46ef3b 'meta_window_new: clean up error handling'
to the wayland branch accidentally added an extra call to meta_error_trap_push(),
meaning that we leaked one level of error traps for each new window.

Fixes warning:
  Gdk-WARNING **: XSetErrorHandler() called with a GDK error trap pushed.
Comment 1 Owen Taylor 2014-09-12 20:38:14 UTC
Created attachment 286091 [details] [review]
windows.c: Fix leaked error trap
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-09-12 21:21:33 UTC
Review of attachment 286091 [details] [review]:

Commit message should say "window-x11" instead of "windows.c". Otherwise looks good. You could have directly pushed this one.
Comment 3 Owen Taylor 2014-09-12 21:30:32 UTC
I figured that if it was tricky enough to get wrong once, it didn't hurt to have
a second pair of eyes to check the fix.